--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@trpc/client": "^11.0.0-rc.621",
+    "@trpc/react-query": "^11.0.0-rc.621",
+    "@trpc/server": "^11.0.0-rc.621",
+    "@types/ws": "^8.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.456.0",
@@ -32,6 +36,7 @@
     "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
