--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@trpc/react-query": "^11.0.0-rc.621",
     "@trpc/server": "^11.0.0-rc.621",
     "@types/ws": "^8.5.13",
+    "argon2": "^0.41.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "prisma": "^5.22.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
